--- a/Homework 12-24-2022/HW 007/hw_007.scss
+++ b/Homework 12-24-2022/HW 007/hw_007.scss
@@ -5,3 +5,87 @@ body, html {
     font-weight: 900;
 }
 
+body {
+    background-color: white;
+    // UPPER PART | CONTACT US
+    #block1 {
+        display: flex;
+        align-items: center;
+        margin-left: 150px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+
+        h1 {
+            text-transform: capitalize;
+            font-size: 24px;
+            margin: 0px;
+        }
+
+        p {
+            margin: 0px;
+            opacity: 0.8;
+        }
+
+        input[type="submit"] {
+            margin-left: 340px;
+            width: 160px;
+            height: 50px;
+            border: none;
+            border-radius: 6px;
+            color: white;
+            background-color: rgb(10,170,240);
+        }
+    }
+    // MIDDLE PART | UNORDERED LISTS
+    #block2 {
+        color: white;
+        padding-top: 20px;
+        min-height: 240px;
+        background-color: rgb(37,43,66);
+
+        span {
+            margin-left: 110px;
+            display: flex;
+        }
+
+        ul {
+            margin-right: 14px;
+
+            h3 {
+                margin-bottom: 14px;
+            }
+
+            li {
+                margin-bottom: 8px;
+                list-style: none;
+                font-weight: lighter;
+
+                img {
+                    background-color: white;
+                }
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                }
+            }
+        }
+    }
+    // BOTTOM PART | SOCIAL MEDIA
+    #block3 {
+        display: flex;
+        margin-left: 150px;
+        align-items: center;
+        min-height: 80px;
+
+        p {
+            text-transform: capitalize;
+            margin-right: 360px;
+            opacity: 0.8;
+        }
+
+        img {
+            margin-right: 20px;
+        }
+    }
+}
