--- a/Homework 12-24-2022/HW 008/hw_008.css
+++ b/Homework 12-24-2022/HW 008/hw_008.css
@@ -2,5 +2,47 @@ body, html {
   font-family: "Montserrat", sans-serif;
   color: black;
   letter-spacing: 1.2px;
-  font-weight: 900;
+  font-weight: 700;
+  margin: 0px;
+  padding: 0px;
+}
+
+#lists {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(37, 43, 66);
+  color: white;
+  padding-top: 40px;
+  min-height: 260px;
+}
+#lists ul {
+  width: 240px;
+  padding: 0px;
+  margin-right: 30px;
+}
+#lists ul h1 {
+  font-size: 20px;
+  margin-bottom: 24px;
+}
+#lists ul li {
+  font-size: smaller;
+  list-style: none;
+  margin-bottom: 14px;
+  font-weight: lighter;
+}
+#lists ul li a {
+  text-decoration: none;
+  color: white;
+}
+#lists ul img {
+  margin-top: 10px;
+  margin-right: 15px;
+}
+
+#bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 60px;
+  text-transform: capitalize;
 }/*# sourceMappingURL=hw_008.css.map */
