--- a/Homework 12-24-2022/HW 010/hw_010.scss
+++ b/Homework 12-24-2022/HW 010/hw_010.scss
@@ -1,7 +1,98 @@
 body, html {
     font-family: 'Montserrat', sans-serif;
-    color: black;
-    letter-spacing: 1.2px;
     font-weight: 900;
+    font-size: 14px;
+    background-color: rgb(37,43,66);
+    color: white;
 }
 
+section {
+    footer {
+        #social-media {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 30px;
+            margin-bottom: 20px;
+
+            h1 {
+                margin-right: 250px;
+            }
+
+            a {
+                text-decoration: none;
+
+                img {
+                margin-right: 18px;
+                background-color: white;
+                }
+            }
+        }
+
+        #links {
+            display: flex;
+            justify-content: center;
+            
+            ul {
+                border-top: 1px solid rgb(200,200,200);
+                width: 180px;
+                padding: 0px;
+
+                h3 {
+                    margin-top: 50px;
+                    margin-bottom: 20px;
+                }
+
+                li {
+                    list-style: none;
+                    margin-top: 10px;
+                    opacity: 0.75;
+                }
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                }
+            }
+
+            ul[id="form"] {
+                width: 300px;
+
+                input[type="email"] {
+                    margin: 0px;
+                    width: 160px;
+                    height: 40px;
+                    outline: none;
+                    border: 1px solid rgb(230,230,230);
+                    border-radius: 2px;
+                    background-color: rgb(250,250,250);
+                    padding: 5px;
+                }
+
+                input[type="submit"] {
+                    margin: 0px;
+                    width: 120px;
+                    height: 50px;
+                    border: 1px solid rgb(200,200,200);
+                    border-radius: 2px;
+                    color: white;
+                    background-color: rgb(10,180,250,0.8);
+                }
+            }
+        }
+
+        #bottom-side {
+            opacity: 0.75;
+            text-transform: capitalize;
+            display: flex;
+            align-items: center;
+            margin-top: 20px;
+            min-height: 80px;
+            background-color: rgb(37,43,66);
+
+            p {
+                margin-left: 200px;
+            }
+        }
+    }
+}
