--- a/Homework 12-24-2022/HW 011/hw_011.css
+++ b/Homework 12-24-2022/HW 011/hw_011.css
@@ -1,6 +1,60 @@
 body, html {
   font-family: "Montserrat", sans-serif;
-  color: black;
-  letter-spacing: 1.2px;
   font-weight: 900;
+  color: white;
+}
+
+body {
+  background-color: rgb(37, 43, 80);
+}
+body #block1 {
+  display: flex;
+  align-items: center;
+  margin-left: 180px;
+  font-size: smaller;
+}
+body #block1 h1 {
+  text-transform: capitalize;
+}
+body #block1 input[type=submit] {
+  margin-left: 380px;
+  width: 160px;
+  height: 45px;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(2, 170, 240);
+  color: white;
+}
+body #block2 {
+  display: flex;
+  margin-left: 140px;
+}
+body #block2 ul {
+  list-style: none;
+  margin-right: 30px;
+}
+body #block2 ul h3 {
+  margin-bottom: 24px;
+}
+body #block2 ul li {
+  opacity: 0.8;
+  font-size: smaller;
+  margin-bottom: 14px;
+}
+body #block2 ul li a {
+  text-decoration: none;
+  color: white;
+}
+body #block3 {
+  display: flex;
+  align-items: center;
+  margin-left: 180px;
+  margin-top: 40px;
+}
+body #block3 p {
+  text-transform: capitalize;
+  margin-right: 500px;
+}
+body #block3 img {
+  margin-right: 25px;
 }/*# sourceMappingURL=hw_011.css.map */
