--- a/Homework 12-24-2022/HW 011/hw_011.scss
+++ b/Homework 12-24-2022/HW 011/hw_011.scss
@@ -1,7 +1,71 @@
 body, html {
     font-family: 'Montserrat', sans-serif;
-    color: black;
-    letter-spacing: 1.2px;
     font-weight: 900;
+    color: white;
 }
 
+body {
+    background-color: rgb(37,43,80);
+
+    #block1 {
+        display: flex;
+        align-items: center;
+        margin-left: 180px;
+        font-size: smaller;
+
+        h1 {
+            text-transform: capitalize;
+        }
+
+        input[type="submit"] {
+            margin-left: 380px;
+            width: 160px;
+            height: 45px;
+            border: none;
+            border-radius: 4px;
+            background-color: rgb(2,170,240);
+            color: white;
+        }
+    }
+    
+    #block2 {
+        display: flex;
+        margin-left: 140px;
+
+        ul {
+            list-style: none;
+            margin-right: 30px;
+
+            h3 {
+                margin-bottom: 24px;
+            }
+
+            li {
+                opacity: 0.8;
+                font-size: smaller;
+                margin-bottom: 14px;
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                }
+            }
+        }
+    }
+    
+    #block3 {
+        display: flex;
+        align-items: center;
+        margin-left: 180px;
+        margin-top: 40px;
+        
+        p {
+            text-transform: capitalize;
+            margin-right: 500px;
+        }
+
+        img {
+            margin-right: 25px;
+        }
+    }
+}
