--- a/Homework 12-27-2022/hw_004.scss
+++ b/Homework 12-27-2022/hw_004.scss
@@ -1,4 +1,48 @@
 body, html {
     font-family: 'Montserrat', sans-serif;
+    display: flex;
+    margin-top: 50px;
 }
-
+#products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 90%;
+    .cards {
+        text-transform: capitalize;
+        text-align: center;
+        width: 300px;
+        margin: 15px 30px 15px;
+        &__img {
+            width: 100%;
+            height: 300px;
+            border-radius: 6px;
+        }
+        &__img--colors {
+            margin: 10px 0px 0px;
+        }
+        &__title--header {
+            font-size: larger;
+            font-weight: bolder;
+            margin: 20px 0px 0px;
+        }
+        &__title--describe {
+            margin: 10px 0px 0px;
+        }
+        &__title__product--price {
+            &__oldprice {
+                opacity: .7;
+                font-weight: lighter;
+            }
+            &__newprice {
+                color: green;
+            }
+        }
+    }
+}
+.bg-image {
+    img {
+        width: 600px;
+        height: 500px;
+    }
+}
