--- a/Homework 12-27-2022/hw_006.css
+++ b/Homework 12-27-2022/hw_006.css
@@ -1,3 +1,92 @@
 body, html {
   font-family: "Montserrat", sans-serif;
+}
+
+#top {
+  margin: 0px 0px 50px;
+}
+#top .top__text {
+  font-size: 20px;
+  text-align: center;
+}
+#top .top__text__header {
+  text-transform: uppercase;
+  font-weight: 900;
+}
+#top .top__text__describe {
+  text-transform: capitalize;
+}
+#top .buttons {
+  padding: 0px;
+  text-align: center;
+}
+#top .buttons button {
+  margin-right: 10px;
+  border: 1px solid rgb(0, 160, 250);
+  background-color: white;
+  border-radius: 10px;
+  width: auto;
+  height: 40px;
+}
+#top .buttons a {
+  text-decoration: none;
+  color: rgb(0, 160, 250);
+  margin: 25px;
+  font-weight: 900;
+}
+
+#products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+}
+#products .cards {
+  text-transform: capitalize;
+  text-align: center;
+  width: 180px;
+  margin: 15px 30px 15px;
+}
+#products .cards__img {
+  width: 100%;
+  height: 180px;
+  border-radius: 6px;
+}
+#products .cards__img--colors {
+  margin: 10px 0px 0px;
+}
+#products .cards__title--header {
+  font-size: larger;
+  font-weight: bolder;
+  margin: 20px 0px 0px;
+}
+#products .cards__title--describe {
+  margin: 10px 0px 0px;
+}
+#products .cards__title__product--price__oldprice {
+  opacity: 0.7;
+  font-weight: lighter;
+}
+#products .cards__title__product--price__newprice {
+  color: green;
+}
+
+#lmp {
+  margin-top: 50px;
+  padding: 0px;
+  text-align: center;
+}
+#lmp button {
+  margin-right: 10px;
+  border: 1px solid rgb(0, 160, 250);
+  background-color: white;
+  border-radius: 10px;
+  width: auto;
+  height: 40px;
+}
+#lmp a {
+  text-decoration: none;
+  color: rgb(0, 160, 250);
+  margin: 25px;
+  font-weight: 900;
 }/*# sourceMappingURL=hw_006.css.map */
