--- a/FIGMA E-commerce/Products/product_03.scss
+++ b/FIGMA E-commerce/Products/product_03.scss
@@ -7,3 +7,262 @@ html, body, h1, h2, h3, h4, h5, h6, ul {
     padding: 0px;
 }
 
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .container__cards__card__no1-img_button1 {
+        border: none;
+        border-radius: 5px;
+        background-color: rgb(221, 80, 80);
+        width: 60px;
+        height: 30px;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -230px;
+        left: 15px;
+    }
+
+    .container__cards__card__no1-img_button2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 180px;
+        margin-left: 30px;
+        position: relative;
+        top: -140px;
+        opacity: 0;
+        color: rgb(128,128,128);
+    }
+
+    .container__cards__card__no1-img_button2:hover {
+        opacity: 0.7;
+    }
+
+    .fa-heart:hover {
+        opacity: 0.9;
+        scale: 1.1;
+        color: rgb(250,180,10);
+    }
+
+    .fa-cart-arrow-down:hover {
+        opacity: 0.9;
+        scale: 1.1;
+        color: rgb(250,180,10);
+    }
+
+    .fa-eye:hover {
+        opacity: 0.9;
+        scale: 1.1;
+        color: rgb(250,180,10);
+    }
+
+    .fa-3x {
+        margin-right: -18px;
+        background-color: rgb(250,250,250,0.9);
+        border-radius: 100px;
+        padding: 15px;
+        scale: 0.7;
+        opacity: 0.85;
+    }
+
+    .poster {
+        width: 600px;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    .container {
+        width: 600px;
+    }
+
+    .container__top {
+        text-align: center;
+    }
+
+    .container__cards {
+        display: flex;
+        justify-content: center;
+    }
+
+    .container__cards__card__no1 {
+        border: 1px solid #000;
+        border-radius: 2px;
+        width: 40%;
+        margin-right: 10px;
+        min-height: 600px;
+    }
+
+    .container__cards__card__no1-img {
+        width: 240px;
+    }
+
+    .container__cards__card__no1-pnl {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: -110px 20px 10px;
+    }
+
+    .container__cards__card__no1-pnl-lang {
+        color: rgb(10,180,250);
+    }
+
+    .container__cards__card__no1-pnl-rating {
+        background-color: rgb(8,0,48,0.85);
+        border: none;
+        border-radius: 12px;
+        color: white;
+        width: 70px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    i[class="fa-solid fa-star fa-1x"] {
+        color: rgb(250,180,10);
+    }
+
+    .container__cards__card__no1-name {
+        font-size: 20px;
+    }
+
+    .container__cards__card__no1-descr {
+        opacity: .8;
+    }
+
+    .additionalMargin {
+        margin-left: 18px;
+    }
+
+    .container__cards__card__no1-sales {
+        opacity: .8;
+    }
+
+    i[class="fa-solid fa-cart-arrow-down fa-1x"] {
+        margin-right: 5px;
+    }
+
+    // PRICES | Discount
+    .container__cards__card__no1-price {
+        margin-bottom: 10px;
+
+        &-old {
+            color: rgb(128,128,128);
+            font-weight: lighter;
+        }
+
+        &-new {
+            color: rgb(0,128,0,0.85);
+            font-weight: bolder;
+        }
+    }
+
+    // COLORS TBlue, Green, Orange, Navy | Pseudo Focus DIVs
+    .container__cards__card__no1-colorSelect {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: flex;
+
+        &-tb {
+            width: 20px;
+            height: 20px;
+            border: none;
+            border-radius: 50px;
+            margin-right: 5px;
+            background-color: rgb(0,128,255);
+        }
+        &-gr {
+            width: 20px;
+            height: 20px;
+            border: none;
+            border-radius: 50px;
+            margin-right: 5px;
+            background-color: rgb(0,128,0);
+        }
+        &-or {
+            width: 20px;
+            height: 20px;
+            border: none;
+            border-radius: 50px;
+            margin-right: 5px;
+            background-color: rgb(255,128,0);
+        }
+        &-na {
+            width: 20px;
+            height: 20px;
+            border: none;
+            border-radius: 50px;
+            margin-right: 5px;
+            background-color: rgb(10,0,80);
+        }
+    }
+
+    .container__cards__card__no1-colorSelect-tb:hover {
+        scale: 1.2;
+        border: 1px solid rgb(116, 199, 255);
+    }
+
+    .container__cards__card__no1-colorSelect-gr:hover {
+        scale: 1.2;
+        border: 1px solid rgb(141, 255, 141);
+    }
+
+    .container__cards__card__no1-colorSelect-or:hover {
+        scale: 1.2;
+        border: 1px solid rgb(255, 202, 87);
+    }
+
+    .container__cards__card__no1-colorSelect-na:hover {
+        scale: 1.2;
+        border: 1px solid rgb(80, 54, 255);
+    }
+
+    .container__cards__card__no1-someData {
+        display: flex;
+        justify-content: space-evenly;
+        opacity: 0.8;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .fa-1x {
+        margin-right: 3px;
+    }
+
+    .fa-clock {
+        color: rgb(10,180,250);
+    }
+
+    .fa-chart-column {
+        color: rgb(240,140,20,.9);
+    }
+
+    .container__cards__card__no1-learnMore {
+        border-radius: 16px;
+        width: 160px;
+        height: 45px;
+        border: 1px solid rgb(10,180,250);
+        background-color: transparent;
+        color: rgb(10,180,250);
+
+        a {
+            text-decoration: none;
+            color: rgb(10,180,250);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+
+    .fa-chevron-right {
+        color: rgb(10,180,250);
+    }
+}
