--- a/FIGMA E-commerce/Products/product_05.css
+++ b/FIGMA E-commerce/Products/product_05.css
@@ -5,4 +5,147 @@
 html, body, h1, h2, h3, h4, h5, h6, ul {
   margin: 0px;
   padding: 0px;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 50px 30px 50px;
+}
+
+.text {
+  width: 75%;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+}
+.text__header {
+  font-size: larger;
+  font-weight: bolder;
+}
+.text__description {
+  font-size: smaller;
+  font-weight: lighter;
+  opacity: 0.75;
+}
+
+.container {
+  width: 75%;
+  display: flex;
+  justify-content: center;
+}
+.container__card {
+  border-radius: 5px;
+  width: 220px;
+  margin-right: 10px;
+  box-shadow: 0px -1px 3px 1px;
+}
+.container__card-upper button {
+  background-color: rgb(236, 80, 80);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 8px;
+  position: relative;
+  top: -140px;
+  left: 10px;
+}
+.container__card-upper img {
+  width: 90%;
+  margin-left: 10px;
+  margin-bottom: -30px;
+}
+.container__card-upper i {
+  opacity: 0;
+  scale: 3;
+  z-index: 100;
+  position: relative;
+  top: -100px;
+}
+.container__card-lower {
+  padding: 10px;
+  font-size: 14px;
+}
+.container__card-lower_header {
+  font-weight: bolder;
+  font-size: larger;
+  margin-bottom: 10px;
+}
+.container__card-lower_reviews {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.container__card-lower_reviews i {
+  color: rgb(250, 180, 10);
+}
+.container__card-lower_reviews p {
+  opacity: 0.8;
+  margin-left: 8px;
+}
+.container__card-lower_price {
+  margin-bottom: 10px;
+}
+.container__card-lower_price del {
+  color: rgb(128, 128, 128);
+  font-size: smaller;
+}
+.container__card-lower_price strong {
+  color: rgb(10, 170, 10);
+  margin-left: 10px;
+  font-size: larger;
+}
+.container__card-lower_colorSelect {
+  display: flex;
+  align-items: center;
+}
+.container__card-lower_colorSelect-tblue {
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: rgb(0, 128, 255);
+  border-radius: 50px;
+  margin-left: 5px;
+}
+.container__card-lower_colorSelect-green {
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: rgb(0, 128, 0);
+  border-radius: 50px;
+  margin-left: 5px;
+}
+.container__card-lower_colorSelect-orange {
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: rgb(255, 128, 0);
+  border-radius: 50px;
+  margin-left: 5px;
+}
+.container__card-lower_colorSelect-navy {
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: rgb(8, 2, 64);
+  border-radius: 50px;
+  margin-left: 5px;
+}
+
+.fa-circle-chevron-left {
+  scale: 3;
+  opacity: 0.2;
+  position: relative;
+  top: 220px;
+  left: 50px;
+}
+
+.fa-circle-chevron-right {
+  scale: 3;
+  opacity: 0.2;
+  position: relative;
+  top: 220px;
+  left: 975px;
 }/*# sourceMappingURL=product_05.css.map */
