--- a/PROJECT-copyPaste/sellhome.css
+++ b/PROJECT-copyPaste/sellhome.css
@@ -13,6 +13,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 
 .dropdown__metbexmasa {
   position: absolute;
+  top: 60px;
+  left: 10px;
   z-index: 50;
   display: none;
   justify-content: space-evenly;
@@ -48,6 +50,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 
 .dropdown__hamamotagi {
   position: absolute;
+  top: 60px;
+  left: 120px;
   z-index: 50;
   display: none;
   justify-content: space-evenly;
@@ -87,6 +91,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 
 .dropdown__yataqotagi {
   position: absolute;
+  top: 60px;
+  left: 350px;
   z-index: 50;
   display: none;
   justify-content: space-evenly;
@@ -126,6 +132,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 
 .dropdown__dekor {
   position: absolute;
+  top: 60px;
+  left: 400px;
   z-index: 50;
   display: none;
   justify-content: space-evenly;
@@ -177,6 +185,9 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 .navmenus__buttons {
   list-style: none;
   margin-right: 40px;
+  height: 58px;
+  display: flex;
+  align-items: center;
 }
 .navmenus__buttons i {
   margin-left: 5px;
@@ -247,16 +258,19 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
   scale: 2;
   color: rgb(250, 250, 250);
   margin: 0px 30px 0px;
+  padding: 10px 0px 10px;
 }
 #navbar #fav {
   scale: 2;
   color: rgb(250, 250, 250);
   margin-right: 30px;
+  padding: 10px 0px 10px;
 }
 #navbar #user {
   scale: 2;
   color: rgb(250, 250, 250);
   margin-right: 30px;
+  padding: 10px 0px 10px;
 }
 
 .dropdown__cart {
@@ -264,6 +278,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
   background-color: rgb(200, 200, 200);
   padding: 10px;
   position: absolute;
+  top: 60px;
+  left: 1050px;
   z-index: 20;
   display: none;
   justify-content: space-between;
@@ -291,6 +307,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
   background-color: rgb(200, 200, 200);
   padding: 10px;
   position: absolute;
+  top: 60px;
+  left: 1200px;
   z-index: 20;
   display: none;
   justify-content: center;
@@ -358,4 +376,33 @@ nav {
 .dropdown__dekor-dek:hover {
   display: flex;
   background-color: rgb(250, 250, 250);
+}
+
+#cart:hover ~ .dropdown__cart {
+  display: flex;
+  background-color: rgb(250, 250, 250);
+  transition: ease 0.35s;
+}
+
+.dropdown__cart:hover {
+  display: flex;
+  background-color: rgb(250, 250, 250);
+}
+
+#user:hover ~ .dropdown__user {
+  display: flex;
+  background-color: rgb(250, 250, 250);
+  transition: ease 0.35s;
+}
+
+.dropdown__user:hover {
+  display: flex;
+  background-color: rgb(250, 250, 250);
+}
+
+a:hover {
+  color: rgb(255, 0, 0);
+  font-size: larger;
+  font-weight: bolder;
+  scale: 1.1;
 }/*# sourceMappingURL=sellhome.css.map */
