--- a/PROJECT-copyPaste/sellhome.scss
+++ b/PROJECT-copyPaste/sellhome.scss
@@ -15,6 +15,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 // SECTION ► DROPDOWN MENU | METBEX VE MASA
 .dropdown__metbexmasa {
     position: absolute;
+    top: 60px;
+    left: 10px;
     z-index: 50;
     display: none; // display: flex;
     justify-content: space-evenly;
@@ -51,6 +53,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 // SECTION ► DROPDOWN MENU | HAMAM OTAGI
 .dropdown__hamamotagi {
     position: absolute;
+    top: 60px;
+    left: 120px;
     z-index: 50;
     display: none; // display: flex;
     justify-content: space-evenly;
@@ -88,8 +92,10 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 // SECTION ► DROPDOWN MENU | YATAQ OTAGI
 .dropdown__yataqotagi {
     position: absolute;
+    top: 60px;
+    left: 350px;
     z-index: 50;
-    display: none; // display: flex;
+    display: none;
     justify-content: space-evenly;
     align-items: flex-start;
     border: 1px solid rgb(0,0,0);
@@ -125,6 +131,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 // SECTION ► DROPDOWN MENU | DEKOR
 .dropdown__dekor {
     position: absolute;
+    top: 60px;
+    left: 400px;
     z-index: 50;
     display: none; // display: flex;
     justify-content: space-evenly;
@@ -173,6 +181,9 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 .navmenus__buttons {
     list-style: none;
     margin-right: 40px;
+    height: 58px;
+    display: flex;
+    align-items: center;
     i {
         margin-left: 5px;
     }
@@ -249,16 +260,19 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
         scale: 2;
         color: rgb(250,250,250);
         margin: 0px 30px 0px;
+        padding: 10px 0px 10px;
     }
     #fav {
         scale: 2;
         color: rgb(250,250,250);
         margin-right: 30px;
+        padding: 10px 0px 10px;
     }
     #user {
         scale: 2;
         color: rgb(250,250,250);
         margin-right: 30px;
+        padding: 10px 0px 10px;
     }
 }
 
@@ -268,6 +282,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
     background-color: rgb(200,200,200);
     padding: 10px;
     position: absolute;
+    top: 60px;
+    left: 1050px;
     z-index: 20;
     display: none; // display: flex;
     justify-content: space-between;
@@ -298,6 +314,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
     background-color: rgb(200,200,200);
     padding: 10px;
     position: absolute;
+    top: 60px;
+    left: 1200px;
     z-index: 20;
     display: none;
     justify-content: center;
@@ -368,4 +386,34 @@ nav {
 .dropdown__dekor-dek:hover {
     display: flex;
     background-color: rgb(250,250,250);
+}
+
+// MENU 5 CART
+#cart:hover ~ .dropdown__cart {
+    display: flex;
+    background-color: rgb(250,250,250);
+    transition: ease 0.35s;
+}
+.dropdown__cart:hover {
+    display: flex;
+    background-color: rgb(250,250,250);
+}
+
+// MENU 6 CART
+#user:hover ~ .dropdown__user {
+    display: flex;
+    background-color: rgb(250,250,250);
+    transition: ease 0.35s;
+}
+.dropdown__user:hover {
+    display: flex;
+    background-color: rgb(250,250,250);
+}
+
+// OVERALL LINK TAG HOVER EFFECT
+a:hover {
+    color: rgb(255,0,0);
+    font-size: larger;
+    font-weight: bolder;
+    scale: 1.1;
 }
