item style 6 html added to E-Commerce Components

--- a/FIGMA E-commerce/Components/card_itemStyle-6.html
+++ b/FIGMA E-commerce/Components/card_itemStyle-6.html
@@ -15,6 +15,15 @@
         <link rel="stylesheet" href="./card_itemStyle-6.css">
     </head>
     <body>
-        
+        <div class="card">
+            <img class="card__img" src="/ASSETS/Products/product_04.jpg" alt="image">
+            <div class="card__desc">
+                <ul>
+                    <h2>Life Tips From Top Ten Adventure Travelers</h2>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque amet iste perferendis?</li>
+                    <a href="#">Google</a> <a href="#">Trending</a> <a href="#">New</a>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
