--- a/FIGMA E-commerce/Components/card_itemStyle-6.css
+++ b/FIGMA E-commerce/Components/card_itemStyle-6.css
@@ -1,11 +1,68 @@
 * {
   font-family: "Montserrat", sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 500;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ul {
   margin: 0px;
   padding: 0px;
+}
+
+.card {
+  position: relative;
+  z-index: 0;
+  width: 400px;
+  height: 560px;
+  border: 1px solid rgb(0, 0, 0);
+}
+
+.card__img {
+  z-index: 1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 395px;
+  height: 560px;
+}
+
+.card__desc {
+  visibility: hidden;
+  transform: translateY(50%) scaleY(0);
+  transition: linear 0.15s;
+  position: absolute;
+  z-index: 2;
+  top: 0px;
+  left: 0px;
+  background: linear-gradient(to top, rgb(8, 8, 8), transparent);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+}
+.card__desc ul {
+  padding: 60px;
+}
+.card__desc ul :not(:last-child) {
+  margin-bottom: 20px;
+}
+.card__desc h2 {
+  font-size: 30px;
+  font-weight: 900;
+}
+.card__desc li {
+  opacity: 0.8;
+  list-style: none;
+}
+.card__desc a {
+  text-decoration: none;
+  color: rgb(110, 210, 250);
+  margin-right: 15px;
+  font-weight: 800;
+}
+
+.card:hover .card__desc {
+  visibility: visible;
+  transform: translateY(0%) scaleY(1);
+  transition: linear 0.15s;
 }/*# sourceMappingURL=card_itemStyle-6.css.map */
