--- a/FIGMA E-commerce/Components/checkbox.html
+++ b/FIGMA E-commerce/Components/checkbox.html
@@ -15,6 +15,39 @@
         <link rel="stylesheet" href="./checkbox.css">
     </head>
     <body>
-        
+        <div class="container">
+            <div class="container__buttons-1">
+                <input type="checkbox" id="checkbox1" name="checkbox1" value="checkbox1">
+                <label for="checkbox1">Checkbox</label>
+                <input type="radio" id="radio1" name="radio1" value="radio1">
+                <label for="radio1">Radio</label>
+                <input type="radio" id="switch1" name="switch1" value="switch1">
+                <label for="switch1">Switch</label>
+            </div>
+            <div class="container__buttons-2">
+                <input type="checkbox" id="checkbox1" name="checkbox1" value="checkbox1">
+                <label for="checkbox1">Checkbox</label>
+                <input type="radio" id="radio1" name="radio1" value="radio1">
+                <label for="radio1">Radio</label>
+                <input type="radio" id="switch1" name="switch1" value="switch1">
+                <label for="switch1">Switch</label>
+            </div>
+            <div class="container__buttons-3">
+                <input type="checkbox" id="checkbox1" name="checkbox1" value="checkbox1">
+                <label for="checkbox1">Checkbox</label>
+                <input type="radio" id="radio1" name="radio1" value="radio1">
+                <label for="radio1">Radio</label>
+                <input type="radio" id="switch1" name="switch1" value="switch1">
+                <label for="switch1">Switch</label>
+            </div>
+            <div class="container__buttons-4">
+                <input type="checkbox" id="checkbox1" name="checkbox1" value="checkbox1">
+                <label for="checkbox1">Checkbox</label>
+                <input type="radio" id="radio1" name="radio1" value="radio1">
+                <label for="radio1">Radio</label>
+                <input type="radio" id="switch1" name="switch1" value="switch1">
+                <label for="switch1">Switch</label>
+            </div>
+        </div>
     </body>
 </html>
