--- a/FIGMA E-commerce/Components/checkbox.scss
+++ b/FIGMA E-commerce/Components/checkbox.scss
@@ -12,4 +12,30 @@ body, h1, h2, h3, h4, h5, h6, p, ul {
     padding: 0px;
 }
 
-// . ►
+// Container ►
+.container {
+    background: linear-gradient(to right,rgb(128,255,0),rgb(0,255,128));
+    width: 400px;
+    height: 150px;
+    border: 1px dotted black;
+    padding: 20px;
+
+    // ROWS ►
+    &__buttons-1, &__buttons-2, &__buttons-3, &__buttons-4 {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        margin-bottom: 20px;
+
+        label:not(:nth-of-type(3)) {
+            margin-right: 60px;
+        }
+
+        input {
+            scale: 2;
+            accent-color: red;
+        }
+    }
+}
