--- a/PROJECT-copyPaste/sellhome.css
+++ b/PROJECT-copyPaste/sellhome.css
@@ -215,7 +215,7 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
   height: 60px;
   border: 1px solid black;
 }
-#navbar input[type=text] {
+#navbar input[type=search] {
   width: 420px;
   height: 36px;
   border: none;
@@ -230,8 +230,8 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
   background-color: transparent;
   border-radius: 30px;
   position: absolute;
-  top: 4px;
-  left: 550px;
+  top: 3px;
+  left: 537px;
   z-index: 11;
 }
 #navbar select {
@@ -243,15 +243,15 @@ p, h1, h2, h3, h4, h5, h6, ul, body {
 }
 #navbar #magnifier {
   position: absolute;
-  top: 11px;
-  left: 557px;
+  top: 10px;
+  left: 544px;
   z-index: 10;
   color: rgb(0, 0, 0);
 }
 #navbar #globe {
   position: absolute;
   top: 21px;
-  left: 1146px;
+  left: 1130px;
   color: rgb(250, 250, 250);
 }
 #navbar #cart {
